--- a/index.html
+++ b/index.html
@@ -98,7 +98,6 @@
             <li><a href="#skills" class="hover:text-gold transition-colors">Skills</a></li>
             <li><a href="#education" class="hover:text-gold transition-colors">Education</a></li>
             <li><a href="#testimonials" class="hover:text-gold transition-colors">Testimonials</a></li>
-            <li><a href="#contact" class="hover:text-gold transition-colors">Contact</a></li>
           </ul>
         </nav>
         <button class="md:hidden text-xl text-gold">☰</button>
@@ -655,7 +654,7 @@
 
       <!-- Contact Information -->
       <div class="md:col-span-4 lg:col-span-4">
-        <h4 class="font-serif text-gold text-lg mb-6 uppercase tracking-wider">Contact</h4>
+        <h4 id="contact" class="font-serif text-gold text-lg mb-6 uppercase tracking-wider">Contact</h4>
         <ul class="space-y-4">
           <li class="flex items-start">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="text-gold mt-1 mr-3 flex-shrink-0">
@@ -705,7 +704,6 @@
     <a href="#skills" class="text-2xl text-gold hover:text-gold/80 transition-colors">Skills</a>
     <a href="#education" class="text-2xl text-gold hover:text-gold/80 transition-colors">Education</a>
     <a href="#testimonials" class="text-2xl text-gold hover:text-gold/80 transition-colors">Testimonials</a>
-    <a href="#contact" class="text-2xl text-gold hover:text-gold/80 transition-colors">Contact</a>
   </div>
 
   <!-- Scripts -->
