--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Meron Degif | Design Portfolio</title>
-  <meta name="description" content="Meron Degif - Emerging designer showcasing innovative projects and skills" />
-  
+ <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<title>Meron Degif | Drafting Student</title>
+
+<meta name="description" content="Explore the design portfolio of Meron Degif, a creative UX/UI designer specializing in user-centered web design, product interfaces, and brand identity." />
+
+<meta name="keywords" content="Meron Degif, UX Designer, UI Designer, Web Designer, Product Design, Branding, Portfolio, Creative Design, Digital Design, User Experience, User Interface" />
+
+<meta name="author" content="Meron Degif" />
+<meta name="robots" content="index, follow" />
+
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
