hero image updated

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
  <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>Meron Degif | Drafting Student</title>
+<title>Meron degefu | Drafting Student</title>
 
-<meta name="description" content="Explore the design portfolio of Meron Degif, a creative UX/UI designer specializing in user-centered web design, product interfaces, and brand identity." />
+<meta name="description" content="Explore the design portfolio of Meron degefu, a creative UX/UI designer specializing in user-centered web design, product interfaces, and brand identity." />
 
-<meta name="keywords" content="Meron Degif, UX Designer, UI Designer, Web Designer, Product Design, Branding, Portfolio, Creative Design, Digital Design, User Experience, User Interface" />
+<meta name="keywords" content="Meron degefu, UX Designer, UI Designer, Web Designer, Product Design, Branding, Portfolio, Creative Design, Digital Design, User Experience, User Interface" />
 
-<meta name="author" content="Meron Degif" />
+<meta name="author" content="Meron degefu" />
 <meta name="robots" content="index, follow" />
 
   <!-- Fonts -->
@@ -97,7 +97,7 @@
   <header class="fixed w-full z-50 backdrop-blur-lg bg-dark/90 nav-transition border-b border-gold/20" data-aos="fade-down">
     <div class="container mx-auto px-6 py-4">
       <div class="flex justify-between items-center">
-        <a href="#" class="text-2xl font-serif font-semibold tracking-tight text-gold">Meron Degif</a>
+        <a href="#" class="text-2xl font-serif font-semibold tracking-tight text-gold">Meron degefu</a>
         <nav class="hidden md:block">
           <ul class="flex space-x-8">
             <li><a href="#home" class="hover:text-gold transition-colors">Home</a></li>
@@ -114,11 +114,11 @@
 
   <!-- Hero Section -->
   <section id="home" class="h-screen relative overflow-hidden">
-    <div class="absolute inset-0 bg-[url('./images/h1.jpg')] bg-cover bg-center"></div>
+    <div class="absolute inset-0 bg-[url('./images/hero.png')] bg-cover bg-center"></div>
     <div class="absolute inset-0 hero-gradient"></div>
     <div class="relative z-10 h-full flex flex-col justify-center items-center text-center px-6">
       <h1 class="text-5xl md:text-7xl font-serif mb-6 text-gold glow-text" data-aos="fade-up" data-aos-delay="100">
-        Meron Degif
+        Meron degefu
       </h1>
       <p class="text-xl md:text-2xl mb-8 max-w-2xl mx-auto" data-aos="fade-up" data-aos-delay="200">
         Design Student | Innovative Thinker | Future Creator
@@ -291,9 +291,11 @@
         <!-- Project 4 -->
         <div class="group relative overflow-hidden rounded-lg cursor-pointer project-card" 
              data-aos="fade-up" data-aos-delay="350"
-             onclick="openModal('Ethiopian National Museum Logo Design', './images/p4.png', `This monument reflects knowledge, innovation, and technical excellence.
-.The flame symbolizes enlightenment, while the gear represents industrial progress.
-.The octagonal base signifies harmony, growth, and a strong educational foundation.`, 'Branding, Logo', '2024')">
+             onclick="openModal('Ethiopian National Museum Logo Design, ','/images/p4.png', `.This project focuses on designing a symbolic logo for the Ethiopian National Museum.
+.It features key elements like obelisks, Lucy (Dinknesh), and traditional patterns.
+.The design represents Ethiopia’s ancient civilization, history, and identity.
+.Bright colors and forms highlight culture, unity, and heritage.
+.It aims to visually connect the past, present, and future of the nation.`, 'Branding, Logo', '2024')">
           <div class="aspect-[4/3] bg-gray-800 overflow-hidden">
             <img src="./images/p4.png" alt="Museum Logo" 
                  class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110">
@@ -627,7 +629,7 @@
       <!-- Brand Column -->
       <div class="md:col-span-4 lg:col-span-5">
         <div class="max-w-xs">
-          <h3 class="text-2xl font-serif text-gold mb-5">Meron Degif</h3>
+          <h3 class="text-2xl font-serif text-gold mb-5">Meron degefu</h3>
           <p class="text-platinum/80 text-lg leading-relaxed mb-6">
             Emerging designer blending technical drafting expertise with innovative spatial solutions.
           </p>
@@ -693,7 +695,7 @@
     <!-- Copyright & Bottom Row -->
     <div class="flex flex-col md:flex-row justify-between items-center">
       <p class="text-platinum/60 text-sm mb-4 md:mb-0">
-        © 2024 Meron Degif. All rights reserved.
+        © 2024 Meron degefu. All rights reserved.
       </p>
       <div class="flex space-x-6">
         <a href="#" class="text-platinum/60 hover:text-gold transition-colors text-sm">Privacy Policy</a>
